Implementacion de modificación y eliminación de usuarios terminada. Pendiente de pruebas.
